--- a/Web/estilos-contactanos.css
+++ b/Web/estilos-contactanos.css
@@ -1,10 +1,13 @@
+@media screen and (max-width:800px){
+  .content-item{
+    width: 100%;
+  }
+
 #foto img{
   width: 100%;
   max-width: 700px;
   overflow: hidden;
-
   float: left;
-  margin-left: 2%;
 }
 
 .Contactanos{
@@ -19,12 +22,13 @@
 h1{
   height: 100px;
   width: 85%;
-  margin-left: 40%;
+  margin-left: 10%;
   margin-top: 3%;
 }
 
 li{
-  height: 100;
+  height: 100px;
+  width: 380px;
   max-width: 450px;
   background-color: white;
   margin: auto;
